8260163: IrresponsiveScriptTest.testInfiniteLoopInScript unit test fails on Windows